<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="10dp">
    
<TextView
    android:id="@id/about_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/splash_title" 
    android:textSize="@dimen/text_h1"
    android:textColor="@color/green"
    />

<TextView
    android:id="@+id/about_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/about_title"
    android:layout_marginLeft="31dp"
    android:layout_marginTop="26dp"
    android:text="@string/splash_subtitle"
    android:textColor="@color/green"
    android:textSize="@dimen/text_h2" 
    />

<TextView
    android:id="@+id/about_version"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@id/about_title"
    android:layout_marginRight="31dp"
    android:text="@string/about_version"
    android:textColor="@color/green"
    android:textSize="@dimen/text_small" 
    />


<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/about_subtitle"
    android:background="@drawable/panel_green"
    >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/about_text"
	    />
        <TextView
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/about_license"
	    />
    </LinearLayout>
</ScrollView>

</RelativeLayout>